[gd_scene load_steps=10 format=2]

[ext_resource path="res://Minigames/Menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://UIElements/DeviceSelection.tscn" type="PackedScene" id=2]
[ext_resource path="res://SoundMagic/MicrophoneInput.tscn" type="PackedScene" id=3]
[ext_resource path="res://UIElements/app_theme.tres" type="Theme" id=4]
[ext_resource path="res://UIElements/ScreenTransitionButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/TyrianShip.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/Font_Title.tres" type="DynamicFont" id=7]
[ext_resource path="res://Assets/UI/Font_Subtitle.tres" type="DynamicFont" id=8]
[ext_resource path="res://Assets/UI/musicOn.png" type="Texture" id=9]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.117647, 0.117647, 0.117647, 1 )

[node name="MicrophoneInput" parent="." instance=ExtResource( 3 )]
HIGHEST_NOTE_INDEX = 45
NOTES_BUFFER_SIZE = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 40
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 40.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="Game Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 108.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Recorder Madness"
align = 1

[node name="Minigames subtitle" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 984.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 8 )
text = "Play minigames with your recorder as a controller!"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 984.0
margin_bottom = 350.0
size_flags_vertical = 3

[node name="Minigames" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 317.0
margin_top = 44.0
margin_right = 667.0
margin_bottom = 150.0
rect_min_size = Vector2( 350, 0 )

[node name="TyrianButton" parent="MarginContainer/VBoxContainer/CenterContainer/Minigames" instance=ExtResource( 5 )]
margin_top = 0.0
margin_right = 350.0
margin_bottom = 48.0
text = "Tyrian"
icon = ExtResource( 6 )
destination = 1

[node name="TyrianButton2" parent="MarginContainer/VBoxContainer/CenterContainer/Minigames" instance=ExtResource( 5 )]
margin_top = 58.0
margin_right = 350.0
margin_bottom = 106.0
text = "Play a song"
icon = ExtResource( 9 )
destination = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 360.0
margin_right = 984.0
margin_bottom = 510.0
size_flags_horizontal = 3
custom_constants/separation = 50
alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 192.0
margin_right = 492.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 150 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel"]
margin_right = 300.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 150 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/CenterContainer"]
margin_left = 49.0
margin_top = 6.0
margin_right = 250.0
margin_bottom = 144.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/CenterContainer/VBoxContainer"]
margin_right = 201.0
margin_bottom = 20.0
text = "You are currently playing:"
align = 1
valign = 1

[node name="NoteLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 30.0
margin_right = 201.0
margin_bottom = 138.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "K#"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 542.0
margin_right = 792.0
margin_bottom = 150.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer"]
margin_top = 39.0
margin_right = 250.0
margin_bottom = 110.0

[node name="SettingsLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer2"]
margin_right = 250.0
margin_bottom = 20.0
text = "Input device:"

[node name="DeviceSelection" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer2" instance=ExtResource( 2 )]
margin_top = 30.0
margin_right = 250.0
margin_bottom = 71.0

[node name="ErrorLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 520.0
margin_right = 984.0
margin_bottom = 540.0
custom_colors/font_color = Color( 1, 0.380392, 0.380392, 1 )
text = "Optional error label here"
align = 1
